After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 652212 - Title bar icon does not update on tab switch
Title bar icon does not update on tab switch
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
2.32.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 657571 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-06-09 16:20 UTC by Victor Vargas
Modified: 2012-08-26 13:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't try to change the window icon when the view changes (4.41 KB, patch)
2012-08-25 16:39 UTC, William Jon McCann
committed Details | Review

Description Victor Vargas 2011-06-09 16:20:25 UTC
This issue was originally reported at: 
https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/763594


I assume this goes for all icons, but in my case I put a USB drive into the computer and a nautilus window opens and the folder icon is exchanged with a usb icon in the title bar. When I open a new tab and go to a regular folder, the icon goes back to a folder. Now when I switch between the two tabs, the icon doesn't change between a folder icon and a usb icon as one would expect. It stays with the icon of the last updated folder. A regular folder can even remain with the usb icon long after the usb drive has been removed.


I have added a zip archive with three cases of this bug. First image shows the home folder and desktop ('Skrivebord' in Danish, as can be seen) folder open in tabs, but with the home folder having the desktop icon in the window list. The second shows the inverted case for the desktop folder and regular folder icon. The last one shows a regular folder with a USB icon.

[1]https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/763594/+attachment/2092644/+files/icon-bug.zip
Comment 1 Cosimo Cecchi 2011-09-11 01:39:04 UTC
*** Bug 657571 has been marked as a duplicate of this bug. ***
Comment 2 William Jon McCann 2012-08-25 16:39:10 UTC
Created attachment 222410 [details] [review]
Don't try to change the window icon when the view changes

This avoids problems with using symbolic icons in the window titles
and with icons not updating.
Comment 3 Cosimo Cecchi 2012-08-25 20:11:24 UTC
Review of attachment 222410 [details] [review]:

Makes sense.