Don't try to change the window icon when the view changes

This avoids problems with using symbolic icons in the window titles
and with icons not updating.

https://bugzilla.gnome.org/show_bug.cgi?id=652212