src/nautilus-window-slot.h
@@ -123,7 +123,6 @@ GType   nautilus_window_slot_get_type (void);
 NautilusWindowSlot * nautilus_window_slot_new (NautilusWindow *window);
 
 void    nautilus_window_slot_update_title		   (NautilusWindowSlot *slot);
-void    nautilus_window_slot_update_icon		   (NautilusWindowSlot *slot);
 void    nautilus_window_slot_set_query_editor_visible	   (NautilusWindowSlot *slot,
 							    gboolean            visible);
 gboolean nautilus_window_slot_handle_event       	   (NautilusWindowSlot *slot,
